tooling/nargo_cli/tests/snapshots/execute__tests__if_else_chain_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9083873885524154306",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91YTU/CQBCdlt1CIQSjZxNv6q2VEvBgYqJ8eNCDHvSgJg2E39Gfbld2ZDpdDIQOgpNsdtt9O/Pe7HQL9WBhKm8eGRvzoWyIubV9tJ3FFfqKPMJdiq9XIV8pjv4BcKwdAEclwPHbNCtQs2E1R/ECwxmb2T60vU/mK0xqHLK4VfofRMl16NBXIf9uSHwK+O+hfyXjP6pbP/dZ0T+wuDWGc61BzJBghiswI4IZrcCMCWa8AjMhmAnDtO3YgzJnzKtEXed1J71vSRuKewVEJ8bWMrF7HosHUKwZYPGbIPqMxB6Lh3x4fnCv24jJlnz4nMrKOnBOkznc30beTgnOVVuIuyDjSzvGPZM8B6Xq3diJgz+NZayewY9hPmrkHuYV89ygeDYXkjmVFeM07bUicagv5KEZ/txed2wfkDW4/sgRP2DxC7wd93heQgc+dOCDvJ3Zccs2U0OfuAb+7jlz1XoHymcgPZMoVhFftIYU0yZ0pkWa8XkjOY93k98r1I7v5HXzG5C5+ob5xbVc/wvR39+N/u4+6X8i+m92oz+R0O9vqB/xD0T/HdMv8Y7KLf2Ns2K6XJwnjKfQPkXHxC+wWCZfH4yr59BD90wzPYh/ZHqk3t0uPb6Anud/puf1gPSoNfS875meFiy/P6isei79weJjnjH8famh+J8BWHzN8FN73XRo2ubDzryfxvNuOk976WyWTFOeMyA5M3n6AqaWgR9hFQAA",
  "debug_symbols": "ldXLaoUwEAbgd8naRSb3+CqlHLzEgyAqXgpFfPfGou0hZ1zMRoz8H8ZMzGysDuX6fLR9M8ws/9hYN1TF0g59HG17xsqp7br2+Xh9zPhxUeI3P49FfwznpZgWliubsdDXLNcQddN2Id7y/TNjShLzipjXaF7c5j2WB85PAFwlQnOyALJAV9Xre4B+Nmh5CW1TYcjCkoVDhXK3wqBLJbg5hQCeCkEWkiwULuBeoGsl+VVBCToVjiw8VVhOFkAW+OqaSwib7l2ryEKThSELfO/av3/QvQlPFY6TBZAFWg8Q14kIMj0SnSILTRaGLNB6GH8C69K8p+U9J+aBkt/j6KuY2qLswtlTm7WvXlrs8j2GpNuO01CFep3C0Xf/W+5RUOEz6eMs4Ji1V5n38RXxNT8=",
  "file_map": {
    "50": {
      "source": "fn main(a: u32, mut c: [u32; 4]) {\n    if a == c[0] {\n        assert(c[0] == 0);\n    } else if a == c[1] {\n        assert(c[1] == 0);\n    } else if a == c[2] {\n        assert(c[2] == 0);\n    } else if a == c[3] {\n        // expect to match this case\n        assert(c[3] == 0);\n    } else {\n        assert(c[0] == 10);\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/if_else_chain/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
